--- a/DirectXGame/DirectXGame.vcxproj
+++ b/DirectXGame/DirectXGame.vcxproj
@@ -106,14 +106,14 @@
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="scene\GameScene.cpp" />
     <ClCompile Include="Graph2D.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
-    <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="scene\SceneManager.cpp" />
     <ClCompile Include="Score.cpp" />
     <ClCompile Include="Stage.cpp" />
-    <ClCompile Include="TitleScene.cpp" />
+    <ClCompile Include="scene\TitleScene.cpp" />
     <ClCompile Include="WorldTransformEx.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -192,14 +192,14 @@
     <None Include="Resources\shaders\Sprite.hlsli" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="GameScene.h" />
+    <ClInclude Include="scene\GameScene.h" />
     <ClInclude Include="Graph2D.h" />
-    <ClInclude Include="IScene.h" />
+    <ClInclude Include="scene\IScene.h" />
     <ClInclude Include="Player.h" />
-    <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="scene\SceneManager.h" />
     <ClInclude Include="Score.h" />
     <ClInclude Include="Stage.h" />
-    <ClInclude Include="TitleScene.h" />
+    <ClInclude Include="scene\TitleScene.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
