--- a/DirectXGame/DirectXGame.vcxproj
+++ b/DirectXGame/DirectXGame.vcxproj
@@ -106,6 +106,7 @@
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Pose.cpp" />
     <ClCompile Include="scene\GameScene.cpp" />
     <ClCompile Include="Graph2D.cpp" />
     <ClCompile Include="main.cpp" />
@@ -194,6 +195,7 @@
     <None Include="Resources\shaders\Sprite.hlsli" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Pose.h" />
     <ClInclude Include="scene\GameScene.h" />
     <ClInclude Include="Graph2D.h" />
     <ClInclude Include="scene\IScene.h" />
